# ci-test

./: Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.rust_latest  cargo.sh  config.yml  dkim.pem  stalwart-jmap.service  stalwart.jmap.plist
.github/workflows/: build.yml  docker.yml  qemu.yml  test.yml
resources/ci/: cargo.sh  install-build-tools.sh
resources/config/: stalwart-jmap.yml
resources/scripts-deb/: postinst  preinst
src/: main.rs  main_old.rs  main_old2.rs  parser.rs  response.rs
